# sql-gatekeeper

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_ZH.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  tests_support.py
.github/ISSUE_TEMPLATE/: bug_report.md  docs.md  feature_request.md
.github/workflows/: ci.yml
docker/: app-entrypoint.sh
docker/mysql-init/meta/: 001_init.sql
docker/mysql-init/orderdb/: 001_schema.sql
docker/mysql-init/userdb/: 001_schema.sql
docs/: test_case_matrix.md
scripts/: demo.ps1  demo.sh
sql/: business_schema.mysql.sql  metadata_schema.mysql.sql  metadata_seed.mysql.sql
src/sql_gatekeeper/: __init__.py  config.py
src/sql_gatekeeper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sql_gatekeeper/api/: app.py  routes.py  schemas.py
src/sql_gatekeeper/bootstrap/: meta.py  redis_demo.py
src/sql_gatekeeper/db/: models.py  session.py
src/sql_gatekeeper/repositories/: __init__.py  audit_log.py  datasource.py  logical_table.py  physical_table_route.py  policy_set.py  route_factor.py  route_rule.py
src/sql_gatekeeper/services/: audit.py  checker.py  datasource_runtime.py  executor.py  explain.py  filter_chain.py  precheck.py  redis_gatekeeper.py  routing.py  sql_parser.py  sql_rewrite.py
src/sql_gatekeeper/tools/: __init__.py  spy_table_config_sync.py
tests/: conftest.py  test_api.py  test_audit.py  test_bootstrap_mysql.py  test_bootstrap_unit.py  test_config.py  test_execute_mysql.py  test_explain_mysql.py  test_filter_chain.py  test_http_api_e2e.py  test_models.py  test_precheck.py  test_redis_gatekeeper.py  test_routing.py  test_spy_table_config_sync.py  test_sql_parser.py  test_sql_rewrite.py
