[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-gatekeeper"
version = "0.1.0"
description = "SQL gatekeeper service for LLM-generated MySQL queries"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = [
  "llm",
  "text-to-sql",
  "sql-guardrails",
  "mysql",
  "fastapi",
  "database-security",
  "ai-agents",
  "sharding",
  "redis",
  "cache-security",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Security",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "PyMySQL>=1.1,<2.0",
  "redis>=5.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
]

[project.urls]
Homepage = "https://github.com/TheCactuslxf/sql-gatekeeper"
Repository = "https://github.com/TheCactuslxf/sql-gatekeeper"
Issues = "https://github.com/TheCactuslxf/sql-gatekeeper/issues"
Changelog = "https://github.com/TheCactuslxf/sql-gatekeeper/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

